Tue Apr  2 11:45:21 2002  Gary Wong  <gtw@research.att.com>

	* gtkgame.c (CubeAnalysis, TakeAnalysis): Remove gtk_widget_pop_style
	calls.

Mon Apr  1 00:39:29 2002  Joern Thyssen  <jthyssen@dk.ibm.com>

	* makeweights.c: #include <string.h> 

	* gnubg.c (CommandSaveSettings): accept parameter, and save
	export settings.

Sun Mar 31 22:36:29 2002  Joern Thyssen  <jthyssen@dk.ibm.com>

	Easter commit no. 9:
	- save all members of evalcontext in SGF format
	- add arOutput for double decisions to move{normal,double}
	- improve cube analysis widget

	* eval.c (getCubeDecisionOrdering): new function.
	* analysis.c (AnalyzeMove): save new fields of move{normal,double}

	* gtkgame.c (CubeAnalysis, TakeAnalysis): improve widgets.

	* sgf.c (WriteDoubleAnalysis, RestoreDoubleAnalysis, 
 	WriteMoveAnalysis, RestoreMoveAnalysis): save/restore all members
	of evalcontext, and save/restore the new fields.

	* html.c (HTMLPrintCubeAnalysisTable): use getCubeDecisionOrdering.


Sun Mar 31 14:36:09 2002  Joern Thyssen  <jthyssen@dk.ibm.com>

	Finish implemention of rollout of initial position.

	* rollout.c (BasicCubefulRollout): do not consider cube action
	for first roll if fInitial.
	* rollout.c (QuasiRandomDice): make special code for fInitial. 
	All callers changed.

	* gnubg.c (CommandRollout): take care that it is not possible to
	rollout cube decisions for fInitial (should allow this anyway?)

	* gtkgame.c (SetRolloutsOK): get fInitial from rollout widget.
	* gtkgame.c (SetRollouts): make button for fInitial and 
	set fInitial if changed.

	* gtkgame.c (GTKPopMoveRecord): make annoying warning to away.

Sun Mar 31 00:51:07 2002  Joern Thyssen  <jthyssen@dk.ibm.com>

	Modify and setup settings for export. So far only the HTML export
	honours most settings.

	* html.c (HTMLPrintCubeAnalysisTable): modify logic for printing.
	* show.c (CommandShowExport): show export settings.
	* gnubg.c: new commands for setting export settings.
	* set.c (CommandSetExport*): new functions.
